docs/cloud/assets/05-pod-with-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  volumes:
    - name: storage-html
      persistentVolumeClaim:
       claimName: nginx-pvc
  containers:
  - name: nginx
    image: nginx:mainline
    volumeMounts:
    - mountPath: "/usr/share/nginx/html"
      name: storage-html
