docs/cloud/assets/mysql-nodeselector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: mysql-nodeselector
spec:
 selector:
   matchLabels:
     app: mysql
 template:
   metadata:
     labels:
       app: mysql
   spec:
     containers:
     - image: mysql:8.0
       name: mysql
       ports:
       - containerPort: 3306
         name: mysql
     nodeSelector:
       configuration: hight
