docs/cloud/assets/mysql-with-sc-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: mysql-with-sc-pvc
spec:
 selector:
   matchLabels:
     app: mysql
 template:
   metadata:
     labels:
       app: mysql
   spec:
     containers:
     - image: mysql:8.0
       name: mysql
       ports:
       - containerPort: 3306
         name: mysql
       volumeMounts:
       - name: mysql-pv
         mountPath: /var/lib/mysql
     volumes:
     - name: mysql-pv
       persistentVolumeClaim:
         claimName: nfs-pvc-from-sc
