docs/cloud/assets/06-service-https.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-https
  labels:
    tier: application
spec:
  ports:
  - port: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  selector:
    app: nginx-https
  type: LoadBalancer
