docs/cloud/assets/07-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-simple
  labels:
    tier: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-simple
  template:
    metadata:
      labels:
        app: nginx-simple
    spec:
      volumes:
      - name: index-html
        emptyDir: {}
      containers:
      - name: nginx
        image: nginx:mainline
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index-html
          mountPath: /usr/share/nginx/html
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-simple-service
  labels:
    tier: networking
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-simple
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-simple-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "61"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: jh-namespace-nginx-simple.ingress.eb68ebe.kyma.ondemand.com
    http:
      paths:
      - path: /my-app(.*)
        pathType: Prefix
        backend:
          service: 
            name: nginx-simple-service
            port:
              number: 80
