docs/cloud/assets/09-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-access
spec: 
  podSelector:
    matchLabels:
      app: nginx-simple
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: "true"
    - ipBlock:
        # China
        cidr: 202.56.0.0/16
    - ipBlock:
        # England
        cidr: 56.16.220.0/28
